--- a/.github/workflows/engine.yml
+++ b/.github/workflows/engine.yml
@@ -26,12 +26,14 @@ jobs:
         
     - name: Install dependencies
       run: |
-        pip install pandas yfinance pyarrow fastparquet requests numpy
+        pip install -r requirements.txt
         
     - name: Execute Trading Engine (Full Cycle)
       env:
         TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        GMAIL_ADDRESS: ${{ secrets.GMAIL_ADDRESS }}
+        GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
       run: |
         python trading_engine.py --mode full
         
